--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,12 @@
     scroll-behavior: smooth;
 }
 
+@layer base {
+    html {
+      @apply scroll-smooth;
+    }
+  }
+
 body{
     background-color: #f6f7f8;
 }
